welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:8: error: not found: value ||
	else if (you==2&&date>=8)||(you>=8&&date==2) {
                                 ^